--- a/indecision-app/package.json
+++ b/indecision-app/package.json
@@ -3,11 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "babel-loader": "^7.1.2",
     "babel-plugin-transform-class-properties": "^6.24.1",
+    "css-loader": "^0.28.7",
+    "node-sass": "^4.7.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-modal": "^3.1.10",
     "react-scripts": "1.0.17",
+    "sass-loader": "^6.0.6",
+    "scss-loader": "^0.0.1",
+    "style-loader": "^0.19.1",
     "validator": "^9.2.0",
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.9.7"
