--- a/indecision-app/package.json
+++ b/indecision-app/package.json
@@ -10,6 +10,7 @@
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-modal": "^3.1.10",
+    "react-native-md5": "^1.0.0",
     "react-scripts": "1.0.17",
     "sass-loader": "^6.0.6",
     "scss-loader": "^0.0.1",
