--- a/indecision-app/package.json
+++ b/indecision-app/package.json
@@ -7,6 +7,7 @@
     "babel-plugin-transform-class-properties": "^6.24.1",
     "css-loader": "^0.28.7",
     "node-sass": "^4.7.2",
+    "normalize.css": "7.0.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-modal": "^3.1.10",
