--- a/expensify-app/package.json
+++ b/expensify-app/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^16.2.0",
     "react-modal": "^3.1.10",
     "react-native-md5": "^1.0.0",
+    "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.17",
     "sass-loader": "^6.0.6",
     "scss-loader": "^0.0.1",
