--- a/expensify-app/package.json
+++ b/expensify-app/package.json
@@ -14,6 +14,7 @@
     "react-native-md5": "^1.0.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.17",
+    "redux": "^3.7.2",
     "sass-loader": "^6.0.6",
     "scss-loader": "^0.0.1",
     "style-loader": "^0.19.1",
