--- a/expensify-app/package.json
+++ b/expensify-app/package.json
@@ -18,6 +18,7 @@
     "sass-loader": "^6.0.6",
     "scss-loader": "^0.0.1",
     "style-loader": "^0.19.1",
+    "uuid": "^3.1.0",
     "validator": "^9.2.0",
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.9.7"
