--- a/expensify-app/package.json
+++ b/expensify-app/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^16.2.0",
     "react-modal": "^3.1.10",
     "react-native-md5": "^1.0.0",
+    "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.17",
     "redux": "^3.7.2",
