--- a/expensify-app/package.json
+++ b/expensify-app/package.json
@@ -7,9 +7,12 @@
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "css-loader": "^0.28.7",
+    "moment": "^2.20.1",
     "node-sass": "^4.7.2",
     "normalize.css": "7.0.0",
     "react": "^16.2.0",
+    "react-addons-shallow-compare": "^15.6.2",
+    "react-dates": "^16.2.1",
     "react-dom": "^16.2.0",
     "react-modal": "^3.1.10",
     "react-native-md5": "^1.0.0",
