--- a/expensify-app/package.json
+++ b/expensify-app/package.json
@@ -7,6 +7,7 @@
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "css-loader": "^0.28.7",
+    "jest": "^22.1.4",
     "moment": "^2.20.1",
     "node-sass": "^4.7.2",
     "normalize.css": "7.0.0",
@@ -31,7 +32,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "webpack",
-    "test": "react-scripts test --env=jsdom",
+    "test": "jest",
     "eject": "react-scripts eject",
     "dev-server": "webpack-dev-server"
   }
