--- a/expensify-app/package.json
+++ b/expensify-app/package.json
@@ -7,7 +7,7 @@
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "css-loader": "^0.28.7",
-    "jest": "^22.1.4",
+    "jest": "20.0.3",
     "moment": "^2.20.1",
     "node-sass": "^4.7.2",
     "normalize.css": "7.0.0",
@@ -34,6 +34,7 @@
     "build": "webpack",
     "test": "jest",
     "eject": "react-scripts eject",
-    "dev-server": "webpack-dev-server"
+    "dev-server": "webpack-dev-server",
+    "serve": "live-server publich/"
   }
 }
