--- a/expensify-app/package.json
+++ b/expensify-app/package.json
@@ -31,10 +31,11 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "webpack",
+    "build:dev": "webpack",
+    "build:prod": "webpack -p --env production",    
     "test": "jest",
     "eject": "react-scripts eject",
     "dev-server": "webpack-dev-server",
-    "serve": "live-server publich/"
+    "serve": "live-server public/"
   }
 }
