--- a/expensify-app/package.json
+++ b/expensify-app/package.json
@@ -7,6 +7,8 @@
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "css-loader": "^0.28.7",
+    "express": "^4.16.2",
+    "extract-text-webpack-plugin": "^3.0.2",
     "jest": "20.0.3",
     "moment": "^2.20.1",
     "node-sass": "^4.7.2",
@@ -32,7 +34,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build:dev": "webpack",
-    "build:prod": "webpack -p --env production",    
+    "build:prod": "webpack -p --env production",
     "test": "jest",
     "eject": "react-scripts eject",
     "dev-server": "webpack-dev-server",
