--- a/expensify-app/package.json
+++ b/expensify-app/package.json
@@ -8,8 +8,7 @@
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "css-loader": "^0.28.7",
     "express": "^4.16.2",
-    "extract-text-webpack-plugin": "^3.0.2",
-    "jest": "20.0.3",
+    "extract-text-webpack-plugin": "^3.0.2",    
     "moment": "^2.20.1",
     "node-sass": "^4.7.2",
     "normalize.css": "7.0.0",
@@ -28,8 +27,7 @@
     "style-loader": "^0.19.1",
     "uuid": "^3.1.0",
     "validator": "^9.2.0",
-    "webpack": "^3.10.0",
-    "webpack-dev-server": "^2.9.7"
+    "webpack": "^3.10.0"
   },
   "scripts": {
     "start": "node server/server.js",
@@ -40,5 +38,9 @@
     "dev-server": "webpack-dev-server",
     "serve": "live-server public/",
     "heroku-postbuild": "yarn run build:prod"
+  },
+  "devDependencies": {
+    "jest": "20.0.3",
+    "webpack-dev-server": "^2.9.7"
   }
 }
