--- a/expensify-app/package.json
+++ b/expensify-app/package.json
@@ -8,7 +8,8 @@
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "css-loader": "^0.28.7",
     "express": "^4.16.2",
-    "extract-text-webpack-plugin": "^3.0.2",    
+    "extract-text-webpack-plugin": "^3.0.2",
+    "firebase": "^4.10.1",
     "moment": "^2.20.1",
     "node-sass": "^4.7.2",
     "normalize.css": "7.0.0",
