--- a/tasks-mgmt/package.json
+++ b/tasks-mgmt/package.json
@@ -5,7 +5,11 @@
   "author": "qzh",
   "license": "MIT",
   "dependencies": {
+    "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.6.1",
-    "babel-preset-react": "^6.24.1"
+    "babel-preset-react": "^6.24.1",
+    "react": "^16.2.0",
+    "reactdom": "^2.0.0",
+    "webpack": "^4.2.0"
   }
 }
